# MailBuddy

./: README.md  pyproject.toml
.github/workflows/: publish.yml
Emailer/: main.py
mailbuddy/: __init__.py  main.py
